# pseudo-passes

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Synthesizing Pseudoephedrine from Methamphetamine with LLVM.pptx
benchmarks/: CMakeLists.txt
benchmarks/resize-malloc/: CMakeLists.txt  resize-malloc-test.cpp
cmake/: AddPortableLLVMPlugin.cmake
include/fuse-functions/: fuse-functions.h
include/passes/: breakpoint-net.h  demote-registers.h  function-name-trace.h  fuse-functions.h  pachinko-calls.h  resize-malloc.h  stack-to-global.h
include/promote-blocks/: promote-blocks.h
include/support/: metadata-util.h  pass-pipeline.h  type-util.h  unqualified.h  value-util.h
lib/: CMakeLists.txt
lib/fuse-functions/: CMakeLists.txt  combined-call-site.cpp  combined-call-site.h  demote-registers.cpp  fuse-functions.cpp  pass-registration.cpp
lib/passes/: CMakeLists.txt
lib/passes/breakpoint-net/: CMakeLists.txt  breakpoint-net.cpp
lib/passes/demote-registers/: CMakeLists.txt  demote-registers.cpp
lib/passes/demote-registers/pass-registration/: pass-registration.cpp
lib/passes/function-name-trace/: CMakeLists.txt  function-name-trace.cpp
lib/passes/fuse-functions/: CMakeLists.txt  combined-call-site.cpp  fuse-functions.cpp  pass-registration.cpp
lib/passes/pachinko-calls/: CMakeLists.txt  pachinko-calls.cpp
lib/passes/promote-blocks/: CMakeLists.txt  promote-blocks.cpp
lib/passes/resize-malloc/: CMakeLists.txt  resize-malloc.cpp
lib/passes/stack-to-global/: CMakeLists.txt  stack-to-global.cpp
lib/promote-blocks/: CMakeLists.txt  promote-blocks.cpp
lib/support/: CMakeLists.txt  metadata-util.cpp  pass-pipeline.cpp  value-util.cpp
